# EGC

./: .gitignore  CONTRIBUTING.md  README.md  RULES.md  SECURITY.md  agent.yaml  bootstrap.py  egc.py  egc_dashboard.py  install.ps1  install.sh  live_execution_test.py  package-lock.json  package.json  pyproject.toml  run.ps1  run.sh  startup.py
.codebuddy/: README.md  README.zh-CN.md  install.js  install.sh  uninstall.js  uninstall.sh
.codex-plugin/: README.md  plugin.json
.gemini-plugin/: PLUGIN_SCHEMA_NOTES.md  README.md  marketplace.json  plugin.json
.github/: FUNDING.yml
.kiro/: README.md  install.sh
.opencode/: MIGRATION.md  README.md  index.ts  opencode.json  package-lock.json  package.json
.trae/: README.md  README.zh-CN.md  install.sh  uninstall.sh
agents/: chief-of-staff.md  csharp-reviewer.md  dart-build-resolver.md  database-reviewer.md  doc-updater.md  flutter-reviewer.md  gan-evaluator.md  gan-generator.md  gan-planner.md  healthcare-reviewer.md  java-build-resolver.md  java-reviewer.md  kotlin-reviewer.md  opensource-forker.md  opensource-packager.md  opensource-sanitizer.md  performance-optimizer.md  rust-build-resolver.md  rust-reviewer.md  typescript-reviewer.md
commands/: auto-update.md  harness-audit.md  loop-status.md  model-route.md  plan-prd.md  plan.md  pr.md  project-init.md  prp-prd.md  quality-gate.md  santa-loop.md  save-session.md  security-scan.md  skill-create.md  skill-health.md
examples/: django-api-GEMINI.md  go-microservice-GEMINI.md  quickstart.py  rust-api-GEMINI.md  saas-nextjs-GEMINI.md  user-GEMINI.md
(+921 files in other folders)
