[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "everything-gemini"
version = "1.0.0"
description = "EGC — Everything Gemini Code"
authors = [{name = "Felipe Marzochi", email = "fmarzochi@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic",
]

[project.optional-dependencies]
gemini = ["google-genai"]
claude = ["anthropic"]
openai = ["openai"]
openrouter = ["openai"]
all = ["google-genai", "anthropic", "openai"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
egc = "egc:start"
